# shopping-list

./: .gitignore  README.md  pyproject.toml
